# UkrainianTournament2024

./: CMakeLists.txt  LICENSE.txt  README.md  compile.sh
include/: App.hpp  AppElement.hpp  Body.hpp  Context.hpp  Controls.hpp  DrawList.hpp  Event.hpp  GUI.hpp  Language.hpp  Model.hpp  Noise.hpp  Obstacle.hpp  Pair.hpp  Projectile.hpp  QuaternionUtil.hpp  Removable.hpp  Renderer.hpp  Scene.hpp  Settings.hpp  Shader.hpp  Target.hpp  Terrain.hpp  Trajectory.hpp  Translator.hpp  Util.hpp  gl.hpp  imgui.hpp
other/: rocket.blend
shaders/: TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader
src/: App.cpp  AppElement.cpp  Body.cpp  Controls.cpp  DrawList.cpp  GUI.cpp  Model.cpp  Noise.cpp  Obstacle.cpp  Pair.cpp  Projectile.cpp  QuaternionUtil.cpp  Removable.cpp  Renderer.cpp  Scene.cpp  Settings.cpp  Shader.cpp  Target.cpp  Terrain.cpp  Trajectory.cpp  Translator.cpp  Util.cpp  main.cpp
translation/: help_eng.txt  help_ukr.txt  ukr.txt
